--- a/block-BHaacu/style.css
+++ b/block-BHaacu/style.css
@@ -48,6 +48,26 @@ table {
   border-spacing: 0;
 }
 
+img {
+  width: 100%;
+}
+
+*, ::before, ::after {
+  box-sizing: border-box;
+}
+
+* {
+  font-family: "Archivo";
+}
+
+.btn {
+  color: #dc3c45;
+  text-decoration: none;
+  border: 1px solid #dc3c45;
+  border-radius: 8rem;
+  padding: 0.5rem 2rem;
+}
+
 .flex {
   display: flex;
 }
@@ -59,6 +79,10 @@ table {
 .container-80 {
   width: 80%;
   margin: 0 auto;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .parent-conatiner {
@@ -74,7 +98,7 @@ table {
   color: white;
 }
 .contact span {
-  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .nav {
@@ -86,7 +110,7 @@ table {
 }
 
 .brandname {
-  padding: 1rem 0;
+  padding: 2rem 0;
   color: black;
   font-size: 1.5rem;
   font-weight: 800;
@@ -96,10 +120,171 @@ table {
 }
 
 .pages {
+  font-family: "Archivo";
   color: black;
 }
 .pages li {
   margin-left: 1rem;
   font-size: 1.2rem;
+  padding: 2rem 0;
+}
+
+.hero {
+  background: url(./assets/media/banner-1.jpg);
+  height: 40rem;
+  background-repeat: no-repeat;
+  -o-object-fit: cover;
+     object-fit: cover;
+  background-size: 100%;
+}
+
+.banner {
+  width: 40%;
+  margin: 2rem 0;
+  padding-top: 15rem;
+  padding-left: 3rem;
+}
+.banner h1 {
+  font-size: 3.5rem;
+  font-weight: 800;
+}
+.banner p {
+  margin-top: 1rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.banner button {
+  background-color: #dc3c45;
+  color: white;
+  border: none;
+  border-radius: 8rem;
+  padding: 0.8rem 2rem;
+  margin-top: 2rem;
+}
+
+h2 {
+  font-size: 3rem;
+  font-weight: 800;
+}
+
+p {
   padding: 1rem 0;
+  color: grey;
+  font-size: 1rem;
+}
+
+.services {
+  padding: 4rem 0;
+}
+
+.consulting {
+  margin-top: 5rem;
+  padding: 3rem 1rem;
+  width: 27%;
+  line-height: 1.2;
+  border: 1px solid gray;
+  border-radius: 1rem;
+}
+.consulting figure {
+  width: 20%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.consulting h3 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  padding-top: 2rem;
+}
+.consulting p {
+  margin-bottom: 1rem;
+}
+
+.background {
+  background-color: #f8f9fa;
+}
+
+.solution {
+  width: 60%;
+  padding: 6rem 0;
+}
+.solution p {
+  font-size: 1.2rem;
+  line-height: 1.5;
+  margin-bottom: 2rem;
+}
+
+.child-one {
+  width: 45%;
+}
+.child-one figure {
+  margin-bottom: 3rem;
+  width: 15%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.child-one p {
+  line-height: 1.5;
+  margin-bottom: 2rem;
+}
+
+.firm {
+  padding: 5rem 0;
+}
+
+.team {
+  width: 45%;
+}
+
+.quotation {
+  margin: 2rem 0;
+  background-color: #dc3c45;
+}
+
+h3 {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.para {
+  width: 70%;
+  text-align: left;
+  padding: 3rem 0;
+  color: #f2f2f2;
+}
+.para p {
+  color: white;
+}
+
+.button {
+  margin-top: 4rem;
+}
+
+.request {
+  color: white;
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 2rem;
+  padding: 0.7rem 2rem;
+}
+
+.article article {
+  width: 45%;
+  padding-top: 8rem;
+  line-height: 1.3;
+}
+.article figure {
+  width: 45%;
+}
+
+.client h2 {
+  padding: 3rem 0;
+}
+.client img {
+  width: 13%;
+  filter: grayscale(100%);
+}
+
+.background-client {
+  background-color: #f8f9fa;
+  padding-bottom: 5rem;
 }/*# sourceMappingURL=style.css.map */
