--- a/block-BHaacu/style.scss
+++ b/block-BHaacu/style.scss
@@ -41,7 +41,25 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+img {
+    width: 100%;
+}
+*, ::before, ::after {
+    box-sizing: border-box;
+}
+// font-family: 'Archivo', sans-serif;
 // custom css
+* {
+    font-family: 'Archivo';
+}
+.btn{
+    color:#dc3c45;
+    text-decoration: none;
+    border: 1px solid #dc3c45;
+    border-radius: 8rem;
+    padding: 0.5rem 2rem;
+}
+
 .flex{
     display: flex;
 }
@@ -51,6 +69,9 @@ table {
 .container-80 {
     width: 80%;
     margin: 0 auto;
+}
+.text-center {
+    text-align: center;
 }
 .parent-conatiner {
     background-color: #dc3c45;
@@ -62,7 +83,7 @@ table {
 padding: 1rem 0;
 color: white;
  span {
-    margin-left: 1rem;
+    margin-right: 1rem;
  }
 }
 
@@ -76,7 +97,7 @@ color: white;
     
 }
 .brandname{
-    padding: 1rem 0;
+    padding: 2rem 0;
     color: black;
     font-size: 1.5rem;
     font-weight: 800;
@@ -85,10 +106,182 @@ color: white;
     }
 }
 .pages {
+    font-family: 'Archivo';
     color: black;
     li{
         margin-left: 1rem;
         font-size: 1.2rem;
-        padding: 1rem 0;
+        padding: 2rem 0;
     }
+}
+
+// hero section
+.hero {
+    background: url(./assets/media/banner-1.jpg);
+    height: 40rem;
+    background-repeat: no-repeat;
+    object-fit: cover;
+     background-size: 100%;
+}
+
+ 
+.banner {
+    width: 40%;
+    margin: 2rem 0;
+    padding-top: 15rem;
+    padding-left: 3rem;
+    h1{
+        font-size: 3.5rem;
+        font-weight: 800;
+       
+        }
+        p {
+            margin-top: 1rem;
+            font-size: 1.2rem;
+            font-weight: 600;
+        }
+        button{
+            background-color: #dc3c45;
+            color: white;
+            border: none;
+            border-radius: 8rem;
+            padding: 0.8rem 2rem;
+            margin-top: 2rem;
+        }
+}
+
+// service section starts here
+h2{
+    font-size: 3rem;
+    font-weight: 800;
+}
+p{
+    padding: 1rem 0;
+    color: grey;
+    font-size: 1rem;
+}
+.services {
+    padding: 4rem 0;
+   
+}
+
+.consulting {
+    margin-top: 5rem;
+    padding: 3rem 1rem;
+    width: 27%;
+    line-height: 1.2;
+    border: 1px solid gray;
+    border-radius: 1rem;
+    figure {
+        width: 20%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    h3{
+        font-size: 1.5rem;
+        font-weight: 700;
+        padding-top: 2rem;
+    }
+    p{
+        margin-bottom: 1rem;
+    }
+    
+}
+.background {
+    background-color: #f8f9fa;
+}
+.solution {
+    width: 60%;
+    padding: 6rem 0;
+    
+    p{
+        font-size: 1.2rem;
+        line-height: 1.5;
+        margin-bottom: 2rem;
+    }
+}
+
+// firm section starts here
+
+.child-one {
+    width: 45%;
+    
+    figure{
+        margin-bottom: 3rem;
+        width: 15%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    p{
+        line-height: 1.5;
+        margin-bottom: 2rem;
+    }
+}
+.firm {
+    padding: 5rem 0;
+}
+.team{
+       
+        width: 45%;
+}
+
+// quotaion section
+
+.quotation {
+    margin: 2rem 0;
+    background-color: #dc3c45;
+}
+h3{
+    font-size: 2rem;
+    font-weight: 500;
+}
+.para {
+    width: 70%;
+    text-align: left;
+    padding: 3rem 0;
+    color: #f2f2f2;
+    p{
+        color: white;
+    }
+ 
+}
+.button {
+    margin-top: 4rem;
+}
+.request {   
+ 
+        color:white;
+        text-decoration: none;
+        border: 1px solid white;
+        border-radius: 2rem;
+        padding: 0.7rem 2rem;
+}
+
+// article section
+
+.article {
+    article{
+        width: 45%;
+        padding-top: 8rem;
+        line-height: 1.3;
+    }
+    figure{
+        width: 45%;
+    }
+}
+
+// clients section
+
+.client{
+    h2{
+        padding: 3rem 0;
+    }
+    img{
+        width: 13%;
+        filter: grayscale(100%);
+    }
+}
+.background-client{
+    background-color: #f8f9fa;
+    padding-bottom: 5rem;
 }
